--- a/mytest/package.json
+++ b/mytest/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node example.js"
     "test": "node example.js"
   },
   "repository": {
